--- a/styles.css
+++ b/styles.css
@@ -244,10 +244,10 @@
 } */
 
 .card {
-  margin:10px;
   display:flex;
   flex-direction:column;
   overflow:visible;
+  padding:10px;
 }
 
 .card-head{
