--- a/styles.css
+++ b/styles.css
@@ -1688,7 +1688,22 @@ input:checked + .slider:before {
   background-color: #12141d;
 }
 
+.ide-error {
+  width: 100%;
+  height: 100%;
+  color: var(--ivory);
+  text-align: center;
+  font-size: large;
+  font-family: "Inter";
+  align-content: center;
 
+}
+
+.ide-error img{
+  height: auto;
+  width: 50px;
+  margin-bottom:10px;
+}
 
 .line-numbers {
   order:0;
@@ -1876,6 +1891,11 @@ input:checked + .slider:before {
   text-align: left;
   font-size: 14px;
   font-weight: 400;
+}
+
+.temp-fs-input:focus{
+  border: 1px solid var(--ivory);
+  outline:none;
 }
 
 .dir div{
