--- a/styles.css
+++ b/styles.css
@@ -1505,6 +1505,7 @@ input:checked + .slider:before {
 
 .transaction-card {
   margin:10px;
+  margin-bottom:0px;
   display:flex;
   flex-direction:column;
   border-radius:6px;
